add template data

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,22 @@
 <head>
   <title>Tabs test</title>
   <script src="yatzy.js" defer></script>
+  <link rel="/yatzy.css" type="text/css">
 </head>
 <body>
+    <h1 class="title">Yatzy</h1>
+    <div id="board">
+        <div id="dice-board">
+            <!-- dice images -->
+            <!-- game turn -->
+            <button>Roll!</button>
+        </div>
+        <div id="overview">
+            <div>
+                <!-- dice rolls -->
+                <!-- sum, bonus, total -->
+            </div>
+        </div>
+    </div>
 </body>
 </html>
