Added Google fonts

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tabs test</title>
-  <script src="yatzy.js" defer></script>
-  <link rel="/yatzy.css" type="text/css">
+    <title>Yatzy!</title>
+    <script src="yatzy.js" defer></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto&display=swap" rel="stylesheet">
+    <link rel="/yatzy.css" type="text/css">
 </head>
 <body>
     <h1 class="title">Yatzy</h1>
@@ -23,3 +24,4 @@
     </div>
 </body>
 </html>
+
