--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Yatzy!</title>
     <script src="yatzy.js" defer></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto&display=swap" rel="stylesheet">
-    <link rel="/yatzy.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="yatzy.css">
 </head>
 <body>
     <h1 class="title">Yatzy</h1>
