--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Yatzy!</title>
     <script src="yatzy.js" defer></script>
+    <script src="render.js" defer></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="yatzy.css">
 </head>
@@ -11,15 +12,16 @@
     <h1 class="title">Yatzy</h1>
     <div id="board">
         <div id="dice-board">
-            <!-- dice images -->
-            <!-- game turn -->
-            <button>Roll!</button>
+            <div>
+                <!-- game turn -->
+            </div>
+            <div>
+                <!-- dice images -->
+            </div>
+            <button class="btn">Roll!</button>
         </div>
         <div id="overview">
-            <div>
-                <!-- dice rolls -->
-                <!-- sum, bonus, total -->
-            </div>
+            
         </div>
     </div>
 </body>
