--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>Yatzy!</title>
+    <script src="variables.js" defer></script>
     <script src="yatzy.js" defer></script>
     <script src="render.js" defer></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
             <div>
                 <!-- game turn -->
             </div>
-            <div>
+            <div id="dice" class="dice-board-container">
                 <!-- dice images -->
             </div>
             <button class="btn">Roll!</button>
