--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
-<!-- tabs.html -->
 <!DOCTYPE html>
 <html>
 <head>
     <title>Yatzy!</title>
+    <meta charset="UTF-8">
     <script src="variables.js" defer></script>
     <script src="yatzy.js" defer></script>
     <script src="render.js" defer></script>
