Add roll button functionality
- add id to roll button
- change renderDie method param to expect die object
- add renderDice method to rerender all dice
- add button onClick event listener
- add constant for amount of dice
- add boardDice list to contain dice objects

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <div id="dice" class="dice-board-container">
                 <!-- dice images -->
             </div>
-            <button class="btn">Roll!</button>
+            <button id="roll" class="btn">Roll!</button>
         </div>
         <div id="overview">
             
