Add round counter

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,7 @@
     <h1 class="title">Yatzy</h1>
     <div id="board">
         <div id="dice-board">
-            <div>
-                <!-- game turn -->
-            </div>
+            <div id="round-counter"></div>
             <div id="dice" class="dice-board-container">
                 <!-- dice images -->
             </div>
